Commit 2 Написание рекомендации